create header with company name

--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
 		/* STEP 8: Add an event handler that listens for the onload event of the JSON file/object */
 		request.onload = function() {
 			let iScreamInc = request.response;
+			console.log(iScreamInc);
+			populateHeader(iScreamInc);
 		}
 		/* STEP 9: Build out the populateHeader() function */
-
+		function populateHeader(jsonObj) {
+			const headerH1 = document.createElement("h1");
+			headerH1.textContent = jsonObj.companyName;
+		}
 		/* STEP 10a: Assemble the showTopFlavors() function */
 
 			// STEP 10b: Bind the JSON topFlavors object to a var
