--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		function populateHeader(jsonObj) {
 			const headerH1 = document.createElement("h1");
 			headerH1.textContent = jsonObj.companyName;
+			header.appendChild(headerH1);
 		}
 		/* STEP 10a: Assemble the showTopFlavors() function */
 
