--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				article.appendChild(p2);
 				article.appendChild(list);
 				// STEP 10h: Append each complete ARTICLE element to the SECTION element
-				section.appendChild("article");
+				section.appendChild(article);
 			}
 		}
 		/* STEP 11: Change the URL in step 3 to point to the JSON file in the local /js folder */
