--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		const header = document.querySelector("header");
 		const section = document.querySelector("section");
 		/* STEP 3: Store the URL of a JSON file in a variable */
-		let requestURL = "https://smccrindle.github.io/comp1073module10/js/i-scream.json";
+		let requestURL = "https://owenl112.github.io/lesson-10-comp1073/js/i-scream.json";
 		/* STEP 4: Create a new XHR object */
 		let request = new XMLHttpRequest();
 		/* STEP 5: Open a new request using the request() method */
