--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				let ingredients = topFlavors[i].ingredients;
 				for(let j=0;j<ingredients.length; j++) {
 					let listItem = document.createElement("li");
-					listItem.textContent = ingredients[i];
+					listItem.textContent = ingredients[j];
 					list.appendChild(listItem);
 				};
 				// STEP 10g: Append each of the above HTML elements to the ARTICLE element
