--- a/index.html
+++ b/index.html
@@ -9,42 +9,73 @@
 </head>
 
 <body>
-	<h1>JSON</h1>
 	<!-- STEP 1: Build out a HEADER and a SECTION element -->
+	<header></header>
+	<section></section>
 
 	<script>
 		/* STEP 2: Bind the HEADER and the SECTION elements above to variables */
-
+		const header = document.querySelector("header");
+		const section = document.querySelector("section");
 		/* STEP 3: Store the URL of a JSON file in a variable */
-
+		let requestURL = "js/i-scream.json";
 		/* STEP 4: Create a new XHR object */
-
+		let request = new XMLHttpRequest();
 		/* STEP 5: Open a new request using the request() method */
-
+		request.open("GET", requestURL);
 		/* STEP 6: Set JavaScript to accept JSON from the server */
-
+		request.responseType = 'json';
 		/* STEP 7: Send the request with the send() method */
-
+		request.send();
 		/* STEP 8: Add an event handler that listens for the onload event of the JSON file/object */
-
+		request.onload = function() {
+			let iScreamInc = request.response;
+			console.log(iScreamInc);
+			showTopFlavors(iScreamInc);
+			populateHeader(iScreamInc);
+		}
 		/* STEP 9: Build out the populateHeader() function */
-
+		function populateHeader(jsonObj) {
+			const headerH1 = document.createElement("h1");
+			headerH1.textContent = jsonObj.companyName;
+			header.appendChild(headerH1);
+		}
 		/* STEP 10a: Assemble the showTopFlavors() function */
-
+		function showTopFlavors(josnObj){
 			// STEP 10b: Bind the JSON topFlavors object to a var
-
+			let topFlavors = josnObj.topFlavors;
 			// STEP 10c: Loop through the topFlavors object
-
+			for(let i = 0; i < topFlavors.length; i ++){
 				// STEP 10d: build HTML elements for the content
-
+				const article = document.createElement("article");
+				const h2 = document.createElement("h2");
+				const image = document.createElement("img");
+				const p1 = document.createElement("p");
+				const p2 = document.createElement("p");
+				const list = document.createElement("ul");
 				// STEP 10e: Set the textContent property for each of the above elements (except the UL), based on the JSON content
+				h2.textContent = topFlavors[i].name;
+				image.setAttribute("src", `images/${topFlavors[i].image}`);
+				p1.textContent = `The dessert type is ${topFlavors[i].type}`;
+				p2.textContent = `calories: ${topFlavors[i].calories}`;
 
 				// STEP 10f: Build a loop for the ingredients array in the JSON
-
+				let ingredients = topFlavors[i].ingredients;
+				for(let j=0;j<ingredients.length; j++) {
+					let listItem = document.createElement("li");
+					listItem.textContent = ingredients[j];
+					list.appendChild(listItem);
+				};
 				// STEP 10g: Append each of the above HTML elements to the ARTICLE element
-
+				article.appendChild(h2);
+				article.appendChild(image);
+				article.appendChild(p1);
+				article.appendChild(p2);
+				article.appendChild(list);
 				// STEP 10h: Append each complete ARTICLE element to the SECTION element
-
+				section.appendChild(article);
+			}
+		}
 		/* STEP 11: Change the URL in step 3 to point to the JSON file in the local /js folder */
 
 		// STEP 12: Add a 3rd flavour of ice cream to the local JSON file, making use of the /images/strawberry-sprinkle.svg image
